[package]
name = "hash_perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
fxhash = "*"
hashbrown_13 = { package = "hashbrown", version = "0.13", features = ["serde", "inline-more"], no_default = true }
hashbrown_12 = { package = "hashbrown", version = "0.12", features = ["serde", "inline-more"], no_default = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "bench_hashmap"
harness = false

[[example]]
name = "main"
path = "src/main.rs"
bench = false

[profile.release]
lto = 'fat'
debug = true
opt-level = 3

[lib]
bench = false
